[gd_scene load_steps=2 format=3 uid="uid://b668dsix7ohq1"]

[ext_resource type="Script" path="res://scripts/Cookies.gd" id="1_3fg3a"]

[node name="Cookies" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3fg3a")

[node name="CookieCounter" type="Label" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 13.0
text = "Cookies: 0"
horizontal_alignment = 1

[node name="ClickerStatus" type="Label" parent="."]
layout_mode = 0
offset_top = 24.0
offset_right = 640.0
offset_bottom = 37.0
text = "CPS: 1 | Clicker Level: 0"
horizontal_alignment = 1

[node name="UpgradeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 48.0
offset_right = 448.0
offset_bottom = 69.0
text = "Upgrade Clicker: 10 Cookies"

[node name="AutoClickerTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="AutoClickerTimer" to="." method="_on_auto_clicker_timer_timeout"]
